Erstellen von leeren Kassenberichten erlauben, wenn keine BAR Einnahmen/Ausgaben an diesem Tag

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -428,6 +428,10 @@
     <p>Unter der Tabelle befindet sich ein Feld, in welchem der Gesamtbetrag des Kassenbuchs (inkl. des Ausgangsbetrags) vorgeblendet wird.
       Durch Klick auf die Schaltfläche <em>Speichern</em> wird das Kassenbuch gespeichert und für den Druck geöffnet.
     </p>
+    <p>
+      Gibt es an diesem Tag keine BAR-Einnahmen-/Ausgaben, kann die Schaltfläche <em>Keine BAR Einnahmen/Ausgaben</em> geklickt werden.
+      Anschließend wird ein leerer Kassenbericht erstellt.
+    </p>
     <h3 id="kassenbcher">Kassenbücher</h3>
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_KASSENBUCH_UEBERSICHT</em> benötigt.
       Um die Kassenbücher öffnen zu können, wird das Recht <em>KASSENBUCH</em> benötigt.
