Kassenbücher beim Löschen nicht tatsächlich löschen sondern nur ausblenden

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -437,6 +437,7 @@
       Um die Kassenbücher öffnen zu können, wird das Recht <em>KASSENBUCH</em> benötigt.
       Um ein Kassenbuch löschen zu können, wird das Recht <em>KASSENBUCH_VERWALTEN</em> benötigt.
     </p>
+    <p>Im Hintergrund wird das Kassenbuch weiterhin mit allen Informationen sowie, wann und von wem gelöscht wurde aufbewahrt.</p>
     <p>Auf dieser Seite befindet sich eine Übersicht aller erstellten Kassenbücher. Mit Hilfe der Suchfilter kann die Anzeige weiter eingeschränkt werden.</p>
     <p>Durch Klick auf das <em>Öffnen-Icon</em> kann die Druckansicht des Kassenbuchs geöffnet werden.</p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann nach erneuter Bestätigung das Kassenbuch gelöscht werden.</p>
