35 - Stornierung und Teilstornierung von Rechnungen ermöglichen

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -256,6 +256,15 @@
       sich öffnenden Dialog gewählt werden.
       Dieses Icon ist nur sichtbar, wenn zum Kunden eine E-Mail-Adresse hinterlegt ist.
     </p>
+    <p>Durch Klick auf das <em>Storno-Icon</em> kann die Rechnung komplett oder teilweise storniert werden.
+      Rechnungen mit einem festen oder prozentualen Gesamtrabatt können nicht storniert werden.
+      Nach Bestätigen der Stornierung wird der Stornierungsbeleg angezeigt und die originale Rechnung ohne die stornierten Positionen.
+      Bei einer Komplettstornierung wird die Rechnung nicht geöffnet.
+    </p>
+    <p>Durch Klick auf das <em>Storno-Übersicht-Icon</em> können alle Stornierungen zu dieser Rechnung angezeigt werden.
+      In dieser Ansicht können Stornierungen gelöscht werden und der Beleg, sowie die Rechnung ohne die stornierten Posten
+      angezeigt werden.
+    </p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann eine Rechnung nach nochmaliger Bestätigung gelöscht werden.</p>
     <h3 id="rechnungen-export">Export</h3>
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_RECHNUNG_EXPORT</em> benötigt.
