--- a/src/main/resources/public/angebot.html
+++ b/src/main/resources/public/angebot.html
@@ -129,6 +129,13 @@
         @close="cancelAddNewItem"
         @saved="handleEditResponse"
       ></posten-edit-dialog>
+      <rechnung-offen-dialog
+        :einstellung-druckansicht-neues-fenster="einstellungDruckansichtNeuesFenster"
+        :kunde-id="entity.angebot.kunde.id"
+        :rechnungen="nichtBezahlteRechnungen"
+        v-if="showNichtBezahlteRechnungDialog"
+        @close="showNichtBezahlteRechnungDialog = false"
+      ></rechnung-offen-dialog>
     </div>
   </body>
   <script src="/scripts/util.js"></script>
@@ -142,6 +149,7 @@
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
   <script src="/scripts/inventar/produkt.suchen.component.js"></script>
+  <script src="/scripts/rechnung/rechnung.offen.dialog.component.js"></script>
   <script src="/scripts/angebot/angebot.header.component.js"></script>
   <script src="/scripts/angebot/angebot.js"></script>
   <script src="/scripts/angebot/angebotsposten.edit.dialog.component.js"></script>
