--- a/src/main/resources/public/bestellung.html
+++ b/src/main/resources/public/bestellung.html
@@ -79,6 +79,13 @@
         @close="showKundeDialog = false"
         @saved="handleKundeResponse"
       ></kunde-suchen-dialog>
+      <rechnung-offen-dialog
+        :einstellung-druckansicht-neues-fenster="einstellungDruckansichtNeuesFenster"
+        :kunde-id="entity.kunde.id"
+        :rechnungen="nichtBezahlteRechnungen"
+        v-if="showNichtBezahlteRechnungDialog"
+        @close="showNichtBezahlteRechnungDialog = false"
+      ></rechnung-offen-dialog>
     </div>
   </body>
   <script src="/scripts/util.js"></script>
@@ -92,6 +99,7 @@
   <script src="/scripts/angebot/angebot.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
+  <script src="/scripts/rechnung/rechnung.offen.dialog.component.js"></script>
   <script src="/scripts/bestellung/bestellung.header.component.js"></script>
   <script src="/scripts/bestellung/bestellung.js"></script>
 </html>
