--- a/src/main/resources/public/reparatur.html
+++ b/src/main/resources/public/reparatur.html
@@ -139,6 +139,13 @@
         @close="showKundeDialog = false"
         @saved="handleKundeResponse"
       ></kunde-suchen-dialog>
+      <rechnung-offen-dialog
+        :einstellung-druckansicht-neues-fenster="einstellungDruckansichtNeuesFenster"
+        :kunde-id="entity.kunde.id"
+        :rechnungen="nichtBezahlteRechnungen"
+        v-if="showNichtBezahlteRechnungDialog"
+        @close="showNichtBezahlteRechnungDialog = false"
+      ></rechnung-offen-dialog>
     </div>
   </body>
   <script src="/scripts/util.js"></script>
@@ -151,6 +158,7 @@
   <script src="/scripts/bestellung/bestellung.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.suchen.dialog.component.js"></script>
   <script src="/scripts/kunde/kunde.edit.dialog.component.js"></script>
+  <script src="/scripts/rechnung/rechnung.offen.dialog.component.js"></script>
   <script src="/scripts/reparatur/reparatur.header.component.js"></script>
   <script src="/scripts/reparatur/reparatur.js"></script>
 </html>
