36 - Problematische Kunden markierbar, bei Auswahl des Kunden erfolgt eine Warnung mit dem Inhalt des Bemerkungstextes

--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -348,6 +348,11 @@
       Kundendatensatz übernommen. Der Kundendatensatz wird anschließend gelöscht.
     </p>
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann nach erneuter Bestätigung der Kunde gelöscht werden. Dabei werden keine Reparaturaufträge oder Rechnungen gelöscht. Jedoch wird die Verknüpfung zum Kunden entfernt, sodass diese Daten beim Ansehen der Aufträge/Rechnungen nicht mehr ersichtlich sind.</p>
+    <p>
+    Problematische Kunden können mit Hilfe des Kontrollkästchens <em>Problematischer Kunde</em> markiert werden.
+    Bei Auswahl dieses Kunden beim Erstellen von Angeboten, Bestellungen oder Rechnungen erscheint eine Warnmeldung.
+    Wurde beim Kunden zusätzlich ein Text im Bemerkungsfeld hinterlegt, wird dieser in der Warnmeldung zusätzlich angezeigt.
+    </p>
     <h2 id="inventar">Inventar</h2>
     <p>Die Seite Inventar unterteilt sich in die sechs Unterseiten <strong>Produkte</strong>, <strong>Gruppen</strong>, <strong>Kategorien</strong>, <strong>Inventur</strong>, <strong>Export</strong> und <strong>Import</strong>.</p>    <h3 id="produkte">Produkte</h3>
     <p>Um diese Seite öffnen zu können, wird das Recht <em>ZUGRIFF_INVENTAR_PRODUKT</em> benötigt.
