--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -359,6 +359,7 @@
     <p>Durch Klick auf das <em>Löschen-Icon</em> kann nach erneuter Bestätigung der Kunde gelöscht werden. Dabei werden keine Reparaturaufträge oder Rechnungen gelöscht. Jedoch wird die Verknüpfung zum Kunden entfernt, sodass diese Daten beim Ansehen der Aufträge/Rechnungen nicht mehr ersichtlich sind.</p>
     <p>
     Problematische Kunden können mit Hilfe des Kontrollkästchens <em>Problematischer Kunde</em> markiert werden.
+    Zur Hervorhebung wird in der zweiten Spalte der Tabelle dieser Ansicht ein rotes <em>Info-Icon</em> dargestellt.
     Bei Auswahl dieses Kunden beim Erstellen von Angeboten, Bestellungen oder Rechnungen erscheint eine Warnmeldung.
     Wurde beim Kunden zusätzlich ein Text im Bemerkungsfeld hinterlegt, wird dieser in der Warnmeldung zusätzlich angezeigt.
     </p>
