--- a/src/main/resources/public/hilfe.html
+++ b/src/main/resources/public/hilfe.html
@@ -424,7 +424,9 @@
     </p>
     <p>Durch Klick auf das <em>Minus-Icon</em> können Produkte für den Import abgewählt werden.</p>
     <p>Es werden nur Produkte importiert, wenn die EAN einmalig vorhanden ist.
-      Werden keine oder mehrere Produkte gefunden, findet keine Anpassung statt.
+      Werden mehrere Produkte gefunden, findet keine Anpassung statt.
+      Kann kein Produkt gefunden werden, wird dieses anhand der übermittelten Daten neu angelegt.
+      Produktkategorien und -gruppen werden ebenfalls angelegt, wenn diese nicht vorhanden sind.
       Angepasst werden die Brutto/Netto-Einkaufs/-Verkaufspreise, sowie, ob der Bestand unbegrenzt ist.
       Die Bezeichnung des Produktes wird nicht angepasst.
     </p>
