--- a/src/main/resources/public/import.html
+++ b/src/main/resources/public/import.html
@@ -35,7 +35,10 @@
         <table>
           <thead>
             <th style="width: 100px;">{{ $t("general.funktionen") }}</th>
+            <th style="width: 550px;">{{ $t("inventar.produkt.kategorie") }}</th>
+            <th style="width: 550px;">{{ $t("inventar.produkt.gruppe") }}</th>
             <th style="width: 550px;">{{ $t("general.bezeichnung") }}</th>
+            <th style="width: 550px;">{{ $t("inventar.produkt.hersteller") }}</th>
             <th style="width: 120px;">{{ $t("inventar.produkt.ean") }}</th>
             <th style="width: 120px;">{{ $t("inventar.produkt.bestandUnendlich") }}</th>
             <th style="width: 100px;">{{ $t("inventar.produkt.ekPreisB") }}</th>
@@ -48,7 +51,10 @@
               <td>
                 <button class="minus" :title="$t('import.keinImport')" v-on:click="removeItem(index)"></button>
               </td>
+              <td>{{produkt.kategorieBezeichnung}}</td>
+              <td>{{produkt.gruppeBezeichnung}}</td>
               <td>{{produkt.bezeichnung}}</td>
+              <td>{{produkt.hersteller}}</td>
               <td>{{produkt.ean}}</td>
               <td>{{produkt.bestandUnendlich ? 'X' : ''}}</td>
               <td>{{ formatMoney(produkt.preisEkBrutto) }}</td>
