Datum auf Bestellungsausdruck anhand des Erstelldatums der Bestellung ableiten, anstatt das Tagesdatum zu verwenden

--- a/src/main/resources/public/bestellung-drucken.html
+++ b/src/main/resources/public/bestellung-drucken.html
@@ -89,7 +89,7 @@
         <tbody>
           <tr>
             <td class="s5">{{ $t("general.datum") }}:</td>
-            <td class="s3">{{currentDate}}</td>
+            <td class="s3">{{ entity.erstelltAm }}</td>
             <td>{{ $t("general.unterschriftK") }}:</td>
             <td class="s4">&nbsp;</td>
           </tr>
