--- a/src/main/resources/public/einstellungen.html
+++ b/src/main/resources/public/einstellungen.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/einstellungen.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
     <link rel="stylesheet" href="/themes/css/raster.css">
@@ -15,7 +16,7 @@
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
   </head>
   <body>
-    <div id="einstellungen">
+    <div id="einstellungen" v-cloak>
       <page-header :marker="'Einstellungen'"></page-header>
       <page-header-einstellungen v-bind:marker="'Allgemein'"></page-header-einstellungen>
       <div id="content">
