--- a/src/main/resources/public/kunden.html
+++ b/src/main/resources/public/kunden.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/kunde.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/grid.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
@@ -16,7 +17,7 @@
     <script type="text/javascript" src="/scripts/vendor/moment.min.js"></script>
   </head>
   <body>
-    <div id="kunden">
+    <div id="kunden" v-cloak>
       <page-header :marker="'Kunden'"></page-header>
       <div id="content">
         <div class="form m1">
