--- a/src/main/resources/public/no-permission.html
+++ b/src/main/resources/public/no-permission.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/kasse.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
     <link rel="stylesheet" href="/themes/css/raster.css">
@@ -14,7 +15,7 @@
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
   </head>
   <body>
-    <div id="no-permission">
+    <div id="no-permission" v-cloak>
       <page-header></page-header>
       <div id="content">
         <div class="m1 error">
