--- a/src/main/resources/public/angebot-drucken.html
+++ b/src/main/resources/public/angebot-drucken.html
@@ -4,6 +4,7 @@
     <title>Angebot drucken - Computer-Insel Tools by Sita Geßner</title>
     <link rel="icon" href="/themes/icons/angebot.png">
     <link rel="stylesheet" href="/themes/css/bestellung.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <script type="text/javascript" src="/scripts/vendor/vue.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/vue-i18n.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
@@ -11,7 +12,7 @@
     <script type="text/javascript" src="/scripts/vendor/de.js"></script>
   </head>
   <body>
-    <div id="angebot-drucken">
+    <div id="angebot-drucken" v-cloak>
       <header>
         <div class="center" style="width: 250px; height: 90px;">
           <img src="/themes/icons/logo.png" width="250" height="90">
