--- a/src/main/resources/public/angebot.html
+++ b/src/main/resources/public/angebot.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/angebot.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/grid.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
@@ -17,7 +18,7 @@
     <script type="text/javascript" src="/scripts/vendor/moment.min.js"></script>
   </head>
   <body>
-    <div id="angebotErstellen">
+    <div id="angebotErstellen" v-cloak>
       <page-header :marker="'Angebot'"></page-header>
       <page-header-angebot v-bind:marker="'Erstellen'"></page-header-angebot>
       <div id="content">
