--- a/src/main/resources/public/bestellung-uebersicht.html
+++ b/src/main/resources/public/bestellung-uebersicht.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/bestellung.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/grid.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
@@ -17,7 +18,7 @@
     <script type="text/javascript" src="/scripts/vendor/moment.min.js"></script>
   </head>
   <body>
-    <div id="bestellungen">
+    <div id="bestellungen" v-cloak>
       <page-header :marker="'Bestellung'"></page-header>
       <page-header-bestellung v-bind:marker="'Bestellungen'"></page-header-bestellung>
       <div id="content">
