--- a/src/main/resources/public/filiale.html
+++ b/src/main/resources/public/filiale.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/einstellungen.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/grid.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
@@ -16,7 +17,7 @@
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
   </head>
   <body>
-    <div id="filiale">
+    <div id="filiale" v-cloak>
       <page-header :marker="'Einstellungen'"></page-header>
       <page-header-einstellungen v-bind:marker="'Filiale'"></page-header-einstellungen>
       <div id="content">
