--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,13 +3,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Computer-Insel Tools by Sita Geßner</title>
     <link rel="icon" href="/themes/icons/kasse.png">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/style.css">
     <script type="text/javascript" src="/scripts/vendor/vue.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/vue-i18n.min.js"></script>
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
   </head>
   <body>
-    <div id="index">
+    <div id="index" v-cloak>
       <page-header></page-header>
       <div id="content">
         <h3>{{ $t("general.willkommen") }}</h3>
