--- a/src/main/resources/public/kassenbuch-uebersicht.html
+++ b/src/main/resources/public/kassenbuch-uebersicht.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/kasse.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/grid.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
@@ -17,7 +18,7 @@
     <script type="text/javascript" src="/scripts/vendor/moment.min.js"></script>
   </head>
   <body>
-    <div id="kassenbuecher">
+    <div id="kassenbuecher" v-cloak>
       <page-header :marker="'Kassenbuch'"></page-header>
       <page-header-kassenbuch v-bind:marker="'Uebersicht'"></page-header-kassenbuch>
       <div id="content">
