--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/kasse.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/grid.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
@@ -15,7 +16,7 @@
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
   </head>
   <body>
-    <div id="login">
+    <div id="login" v-cloak>
       <div id="content">
         <h3>{{ $t("einstellung.bitteAnmelden") }}:</h3>
           <div class="form">
