--- a/src/main/resources/public/mitarbeiter-profil.html
+++ b/src/main/resources/public/mitarbeiter-profil.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/einstellungen.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/grid.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
@@ -16,7 +17,7 @@
     <script type="text/javascript" src="/scripts/vendor/axios.min.js"></script>
   </head>
   <body>
-    <div id="mitarbeiterProfil">
+    <div id="mitarbeiterProfil" v-cloak>
       <page-header></page-header>
       <div id="content">
         <div class="tabbed">
