--- a/src/main/resources/public/rechnung-export.html
+++ b/src/main/resources/public/rechnung-export.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/themes/icons/rechnung.png">
     <link rel="stylesheet" href="/themes/css/button.css">
     <link rel="stylesheet" href="/themes/css/dialog.css">
+    <link rel="stylesheet" href="/themes/css/general.css">
     <link rel="stylesheet" href="/themes/css/grid.css">
     <link rel="stylesheet" href="/themes/css/loading.css">
     <link rel="stylesheet" href="/themes/css/radio.css">
@@ -18,7 +19,7 @@
     <script type="text/javascript" src="/scripts/vendor/de.js"></script>
   </head>
   <body>
-    <div id="rechnungen-export">
+    <div id="rechnungen-export" v-cloak>
       <page-header :marker="'Rechnungen'"></page-header>
       <page-header-rechnung v-bind:marker="'Rechnungen-Export'"></page-header-rechnung>
       <div id="content">
