Beschriftung für Lieferdatum bei Rechnungen zu 'Liefer- / Leistungsdatum' geändert

--- a/src/main/resources/public/rechnung-drucken.html
+++ b/src/main/resources/public/rechnung-drucken.html
@@ -156,7 +156,7 @@
         <span v-if="art === 'BAR'"> {{ $t("rechnung.zahlungsartBarZusatz") }}</span>
         <br>
         <br>
-        <span v-if="entity.rechnung.lieferdatum">{{ $t("general.lieferdatum") }}: {{entity.rechnung.lieferdatum}}</span>
+        <span v-if="entity.rechnung.lieferdatum">{{ $t("rechnung.lieferdatum") }}: {{entity.rechnung.lieferdatum}}</span>
         <span v-if="!entity.rechnung.lieferdatum">{{ $t("rechnung.rechnungsdatumZusatz") }}</span>
       </div>
       <footer style="background-color: white; z-index: 999;">
