--- a/src/main/resources/public/rechnung.html
+++ b/src/main/resources/public/rechnung.html
@@ -100,9 +100,9 @@
             </label>
           </div>
           <div class="m1">
-            <div class="m4m">
-              <label for="rechnungEditForm_lieferdatum">{{ $t("general.lieferdatum") }}</label>
-              <input class="m4" id="rechnungEditForm_lieferdatum" :title="$t('rechnung.lieferdatumInfo')" type="date" v-model="entity.rechnung.lieferdatum" />
+            <div class="m3m">
+              <label for="rechnungEditForm_lieferdatum">{{ $t("rechnung.lieferdatum") }}</label>
+              <input class="m3" id="rechnungEditForm_lieferdatum" :title="$t('rechnung.lieferdatumInfo')" type="date" v-model="entity.rechnung.lieferdatum" />
             </div>
           </div>
           <div class="m1" v-if="entity.rechnung.angebot">
